--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -101,7 +101,7 @@ body {
     width: 100%;
 }
 .card .user{
-    border-radius: 50%;
+    border-radius: 50%/50%;
     display: block;
     height: 120px;
     margin: -55px auto 0;
