--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -101,7 +101,7 @@ body {
     width: 100%;
 }
 .card .user{
-    border-radius: 50%/50%;
+    border-radius: 50%;
     display: block;
     height: 120px;
     margin: -55px auto 0;
@@ -111,7 +111,7 @@ body {
 .card .user img{
     background: none repeat scroll 0 0 #FFFFFF;
     border: 4px solid #FFFFFF;
-    width: 100%;
+    width: auto;
 }
 
 .card .content{
