--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -111,7 +111,7 @@ body {
 .card .user img{
     background: none repeat scroll 0 0 #FFFFFF;
     border: 4px solid #FFFFFF;
-    width: auto;
+    width: 100%;
 }
 
 .card .content{
