--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -101,6 +101,7 @@ body {
     width: 100%;
 }
 .card .user{
+    border-radius: 50%;
     display: block;
     height: 120px;
     margin: -55px auto 0;
@@ -111,8 +112,12 @@ body {
     background: none repeat scroll 0 0 #FFFFFF;
     border: 4px solid #FFFFFF;
     width: 100%;
-    border-radius: 50%;
-    
+    position: absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
 }
 
 .card .content{
