--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -107,6 +107,7 @@ body {
     margin: -55px auto 0;
     overflow: hidden;
     width: 120px;
+    position: relative;
 }
 .card .user img{
     background: none repeat scroll 0 0 #FFFFFF;
