--- a/public/css/rotating-card.css
+++ b/public/css/rotating-card.css
@@ -102,17 +102,21 @@ body {
 }
 .card .user{
     border-radius: 50%;
+    position: relative;
     display: block;
     height: 120px;
     margin: -55px auto 0;
     overflow: hidden;
     width: 120px;
-    position: relative;
 }
 .card .user img{
     background: none repeat scroll 0 0 #FFFFFF;
     border: 4px solid #FFFFFF;
-    width: 100%;
+    /*width: 100%;*/
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
     position: absolute;
     top: -9999px;
     bottom: -9999px;
